// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<ul
  className="ant-menu {\\"style\\":[{\\"lineHeight\\":\\"64px\\",\\"display\\":false},null,null,null,null]} ant-menu-dark ant-menu-root ant-menu-vertical"
  id="default"
  onMouseEnter={[Function]}
  onTransitionEnd={[Function]}
  role="menu"
  style={Object {}}
/>
`;

exports[`Render properties.links 1`] = `
<ul
  className="ant-menu {\\"style\\":[{\\"lineHeight\\":\\"64px\\",\\"display\\":false},null,null,null,null]} ant-menu-dark ant-menu-root ant-menu-vertical"
  id="properties.links"
  onMouseEnter={[Function]}
  onTransitionEnd={[Function]}
  role="menu"
  style={Object {}}
>
  <li
    className="ant-menu-item ant-menu-item-only-child"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="menuitem"
    style={Object {}}
  >
    <span
      className="{\\"style\\":[null]}"
    >
      one
    </span>
  </li>
  <li
    className="ant-menu-item ant-menu-item-only-child"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="menuitem"
    style={Object {}}
  >
    <span
      className="{\\"style\\":[null]}"
    >
      two
    </span>
  </li>
</ul>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.links 1`] = `true`;

exports[`Test Schema properties.links 2`] = `null`;
